WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
220071
Sibling element wheel event regions can be wrong
https://bugs.webkit.org/show_bug.cgi?id=220071
Summary
Sibling element wheel event regions can be wrong
Simon Fraser (smfr)
Reported
2020-12-21 14:56:22 PST
Sibling element wheel event regions can be wrong
Attachments
Patch
(5.11 KB, patch)
2020-12-21 14:58 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2020-12-21 14:58:34 PST
Created
attachment 416634
[details]
Patch
Simon Fraser (smfr)
Comment 2
2020-12-21 14:58:41 PST
<
rdar://problem/72435466
>
Daniel Bates
Comment 3
2020-12-21 22:31:46 PST
Comment on
attachment 416634
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=416634&action=review
Patch looks good.
> Source/WebCore/ChangeLog:11 > + with different handlers. For now, just disable style sharing for any elements
Last sentence doesn't read well.
EWS
Comment 4
2020-12-22 08:48:56 PST
Committed
r271054
: <
https://trac.webkit.org/changeset/271054
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 416634
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug