Sibling element wheel event regions can be wrong https://bugs.webkit.org/show_bug.cgi?id=220071 Source/WebCore:

<rdar://problem/72435466>

Reviewed by Daniel Bates.

RenderStyle contains eventListenerRegionTypes() data which derive from registered
wheel event handlers, so style sharing needs to avoid sharing style between elements
with different handlers. For now, just disable style sharing for any elements
which event handlers.

Test: fast/scrolling/mac/wheel-event-listener-region-siblings.html

* style/StyleSharingResolver.cpp:
(WebCore::Style::SharingResolver::canShareStyleWithElement const):

LayoutTests:

Reviewed by Daniel Bates.

* fast/scrolling/mac/wheel-event-listener-region-siblings-expected.txt: Added.
* fast/scrolling/mac/wheel-event-listener-region-siblings.html: Added.


Canonical link: https://commits.webkit.org/232651@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271054 268f45cc-cd09-0410-ab3c-d52691b4dbfc